# agent-lens

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  deny.toml  dprint.json  install.sh  mise.base.toml  mise.rust.toml  mise.ts.toml
.cargo/: mutants.toml
.claude/: settings.json
.claude/agents/: refactor-planner.md
.claude/hooks/: session-start.sh
.claude/skills/agent-lens/: SKILL.md
.claude/skills/audit-architecture/: SKILL.md
.claude/skills/find-duplicates/: SKILL.md
.claude/skills/find-refactor-targets/: SKILL.md
.claude/skills/review-pending-changes/: SKILL.md
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: ci_rust.yml  ci_ts.yml  codeql.yml  lint_gha.yml  mutants.yml  pages.yml  release-latest.yml  sbom.yml  trivy.yml  trufflehog.yml
crates/agent-hooks/: Cargo.toml
crates/agent-hooks/src/: lib.rs
crates/agent-hooks/src/claude_code/: context.rs  mod.rs  post_tool_use.rs  pre_tool_use.rs  session_start.rs  stop.rs  subagent_stop.rs  user_prompt_submit.rs
crates/agent-hooks/src/codex/: context.rs  mod.rs  permission_request.rs  post_tool_use.rs  pre_tool_use.rs  session_start.rs  stop.rs  user_prompt_submit.rs
crates/agent-lens/: Cargo.toml
crates/agent-lens/benches/: similarity.rs
crates/agent-lens/src/: cli.rs  lib.rs  main.rs  test_support.rs
crates/agent-lens/src/analyze/: cargo_meta.rs  cohesion.rs  complexity.rs  context_span.rs  coupling.rs  crate_root.rs  dead_pub.rs  diff.rs  format.rs  function_graph.rs  hotspot.rs  mod.rs  path_filter.rs  runner.rs  similarity.rs  source_files.rs  wrapper.rs
crates/agent-lens/src/analyze/function_graph/: resolve.rs
crates/agent-lens/src/analyze/similarity/: candidates.rs  corpus.rs  diff_filter.rs  extract.rs  report.rs
crates/agent-lens/src/baseline/: compare.rs  mod.rs  runner.rs  storage.rs
crates/agent-lens/src/baseline/adapters/: cohesion.rs  complexity.rs  coupling.rs  hotspot.rs  mod.rs
crates/agent-lens/src/hooks/: mod.rs  setup.rs  setup_common.rs
crates/agent-lens/src/hooks/codex/: mod.rs  setup.rs
crates/agent-lens/src/hooks/codex/post_tool_use/: mod.rs  similarity.rs  wrapper.rs
crates/agent-lens/src/hooks/codex/pre_tool_use/: mod.rs
crates/agent-lens/src/hooks/codex/session_start/: mod.rs
crates/agent-lens/src/hooks/core/: cohesion.rs  complexity.rs  error.rs  mod.rs  runner.rs  session_summary.rs  similarity.rs  wrapper.rs
crates/agent-lens/src/hooks/post_tool_use/: mod.rs  rust_similarity.rs  similarity.rs  wrapper.rs
crates/agent-lens/src/hooks/pre_tool_use/: mod.rs
crates/agent-lens/src/hooks/session_start/: mod.rs
crates/agent-lens/tests/: baseline_smoke.rs  cli_smoke.rs
crates/lens-domain/: Cargo.toml
crates/lens-domain/proptest-regressions/: lsh.txt  tsed.txt
crates/lens-domain/src/: apted.rs  cohesion.rs  complexity.rs  context_span.rs  coupling.rs  dead_pub.rs  function.rs  hotspot.rs  lib.rs  lsh.rs  naming.rs  syntax.rs  tree.rs  tsed.rs  wrapper.rs
crates/lens-golang/: Cargo.toml
crates/lens-golang/src/: attrs.rs  call_index.rs  cohesion.rs  complexity.rs  context_span.rs  coupling.rs  lib.rs  parser.rs  wrapper.rs
crates/lens-py/: Cargo.toml
crates/lens-py/src/: attrs.rs  call_index.rs  cohesion.rs  complexity.rs  context_span.rs  coupling.rs  lib.rs  line_index.rs  parser.rs  wrapper.rs
crates/lens-rust/: Cargo.toml
crates/lens-rust/src/: attrs.rs  call_index.rs  cohesion.rs  common.rs  complexity.rs  coupling.rs  lib.rs  parser.rs  pub_items.rs  wrapper.rs
crates/lens-rust/src/parser/: items.rs  mod.rs  patterns.rs  types.rs
crates/lens-ts/: Cargo.toml
crates/lens-ts/src/: attrs.rs  call_index.rs  cohesion.rs  complexity.rs  context_span.rs  coupling.rs  lib.rs  line_index.rs  parser.rs  tree.rs  walk.rs  wrapper.rs
docs/: refactor-plan.md  syntax-facts.md
web/: oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
web/src/: graph.test.ts  graph.ts  main.ts  styles.css
web/src/components/: FunctionGraphShell.tsx
web/src/routes/: __root.tsx  index.tsx
web/src/server/: graphReport.ts
web/src/viewer/: dom.ts  layout.ts  types.ts
