[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/illumination-k/agent-lens"

[workspace.dependencies]
rstest = "0.26"
thiserror = "2"

[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "deny"
