[package]
name = "agent-lens"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "agent-lens"
path = "src/main.rs"

[dependencies]
agent-hooks = { path = "../agent-hooks", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
lens-domain = { path = "../lens-domain", version = "0.1.0" }
lens-py = { path = "../lens-py", version = "0.1.0" }
lens-rust = { path = "../lens-rust", version = "0.1.0" }
lens-ts = { path = "../lens-ts", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rstest = { workspace = true }
serde_json = "1"
tempfile = "3"
