[package]
name = "lens-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
lens-domain = { path = "../lens-domain", version = "0.1.0" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.10" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.10" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.10" }
